--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -38,13 +38,14 @@
                                         </span> руб.
                                    {% endif %} 
                                {% else %}
-                                   {%  if field.name == 'product' %}
-                                       {% cache 3600 orderitemform_product field.value %}
-                                           {{ field }}
-                                       {% endcache %}
-                                   {% else %}
-                                       {{ field }}
-                                   {% endif %}
+{#                                   {%  if field.name == 'product' %}#}
+{#                                       {% cache 3600 orderitemform_product field.value %}#}
+{#                                           {{ field }}#}
+{#                                       {% endcache %}#}
+{#                                   {% else %}#}
+{#                                       {{ field }}#}
+{#                                   {% endif %}#}
+                                   {{ field }}
                                {% endif %}
                            </td>
                        {% endfor %}
